--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1096,6 +1096,10 @@ section {
     width: auto;
     padding-right: 20px 15px;
   }
+
+  .about-info-div {
+    padding-left: "5px";
+  }
 }
 
 /* Custom Styles */
